fixed flickering

--- a/css/style.scss
+++ b/css/style.scss
@@ -31,3 +31,22 @@
 @import "contact/hero";
 @import "contact/info";
 @import "contact/google";
+
+// to fix flickering in chrome
+html.has-scroll-smooth {
+  overflow: hidden;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+// [data-load-container] {
+// 	position: fixed;
+// 	top: 0;
+// 	right: 0;
+// 	bottom: 0;
+// 	left: 0;
+// 	width: 100vw;
+// }
